# tinstar

./: .gitignore  .mcp.json  .npmignore  .roborev.toml  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  Dockerfile  GIT-FLOW.md  LICENSE  LICENSE.txt  PLACEMENT-API-NOTES.md  PLAN17.md  README.md  RESPONSIVENESS_DESIGN.md  biome.json  design.md  docker-integration-test.sh  docker-real-integration-test.sh  docker-test-setup.sh  eslint.config.js  index.html  justfile  manual-screenshot.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  tailwind.theme.js  take-screenshots.mjs  test-input-system.js  test_filelist_api.py  test_integration_e2e.py  tmux.tinstar.conf  todo  todos  tsconfig.app.json  (+6 more)
.claude/: settings.json
.desloppify/: query.json  state-typescript.json  state-typescript.json.bak
docs/: VISION.md  agent-api.md  architecture.md  backend-data-requirements.md  bundled-plugin-howto.md  contributing.md  conventions.md  design-generic-entities.md  desktop-app.md  dev.md  docker-session-fixes.md  docker-session-verification-report.md  external-plugin-quickstart.md  feature-catalog.md  image-requirements.md  marshal-charter.md  multi-agent-patterns.md  nats-agent-channels.md  nats-e2e-test-plan.md  patterns-v2.md  plugin-system.md  project_goal.md  push-sensors.md  release-notes-v3-7.md  release-notes-v4-0.md  release-notes-v5-0.md  release-notes-v5-1.md  release-notes-v5-2.md  release-notes-v5-3.md  releasing.md  roadmap.md  running-on-windows-wsl.md  slate-design-language.md  test-markdown-renderer.md  testing.md  the-slate.md  v4.1-punchlist.md
e2e/: add-widget-affordance.spec.ts  agent-quadrant.spec.ts  background-sessions.spec.ts  canvas-interactions.spec.ts  cc-quota.spec.ts  config-round-trip.spec.ts  constellation-anchors.spec.ts  dialogs.spec.ts  editor-widget.spec.ts  entity-crud.spec.ts  entity-labels.spec.ts  entity-settings.spec.ts  file-touched.spec.ts  file-upload.spec.ts  file-watch-smoke.spec.ts  fit-to-viewport.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  helpers.ts  hotkeys.spec.ts  inbox-view.spec.ts  keyboard-shortcuts.spec.ts  minimap.spec.ts  model-attribution.spec.ts  note-replies.spec.ts  onboarding-flow.spec.ts  patterns.spec.ts  persistence.spec.ts  plugin-widget-spawn.spec.ts  procedures.spec.ts  project-star-hide-reorder.spec.ts  prompt-composer-history.spec.ts  random-run-color.spec.ts  realtime-updates.spec.ts  run-delete.spec.ts  run-interactions.spec.ts  run-panels.spec.ts  run-visibility.spec.ts  saloon.spec.ts  (+10 more)
eslint-rules/: valid-theme-classnames.js  valid-theme-classnames.test.js
nats-channel-mcp/: .gitignore  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  config.rs  dialog.rs  main.rs
(+1416 files in other folders)
