[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinstar"
version = "0.1.0"
description = "Tinstar: A development environment management tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CtrlTower Team"}
]
keywords = ["development", "environment", "management", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer",
    "fastapi>=0.104.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
tinstar = "tinstar.cli:main"

[project.urls]
Homepage = "https://github.com/ctrltower/tinstar"
Repository = "https://github.com/ctrltower/tinstar"
Issues = "https://github.com/ctrltower/tinstar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tinstar*"]

[tool.setuptools.package-data]
tinstar = ["installation/*.json"]