[package]
name = "tinstar-desktop"
version = "5.1.0"
description = "Tinstar — Agent Orchestrator (desktop)"
authors = ["Tinstar"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
thiserror = "1"
tauri-plugin-dialog = "2"
which = "6"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
